@@ -4233,6 +4233,7 @@ Here are some important effects you may consider for your items:</p>
 "Prop_ItemTransporter" makes an item that transports things.<br>
 "Prop_ItemTransReceiver" makes an item receives transported things.<br>
 "Prop_LangTranslator" makes the item a translator of languages.<br>
+"Prop_LimitedEquip" can limit the number of particular items that can be equipped.<br>
 "Prop_LimitedItems" can limit the number of a particular item ever to
 be owned.<br>
 "Prop_LocationBound" limits where an item can be taken from.<br>
