@@ -934,14 +934,25 @@ PLAYERS will allow players to be affected.  An optional zapper mask may follow a
 to add additional masks. \
 <ZAP=disallow>
 
+PROP_LIMITEDEQUIP=\
+Property   : Prop_LimitedEquip\n\r\
+Targets    : Items\n\r\
+Parameters : [MAX EQUIPPED](;ID="[IDENTIFIER]" MESSAGE="[MESSAGE]")\n\r\
+Example    : 3\n\r\
+Example    : 3;id="my unique id" message="Can't do it!"\n\r\
+Description: \n\r\
+This property will ensure that no more than the given number of items \
+with the same name (or ID) as the ones with this property can be equipped \
+by someone at the same time.
+
 PROP_LIMITEDITEMS=\
 Property   : Prop_LimitedItems\n\r\
 Targets    : Items\n\r\
-Parameters : The number of items with this name to maintain\n\r\
+Parameters : [MAX ITEMS](;ID="[IDENTIFIER]")\n\r\
 Example    : 3\n\r\
 Description: \n\r\
 This property will ensure that no more than the given number of items \
-with the same name as the ones with this property will exist, either \
+with the same name (or ID) as the ones with this property will exist, either \
 in the inventory of players, or in rooms.  It works by removing the \
 excess items from the map when someone first enters a room with one \
 of the excess items.  For this reason, limited items are automatically \
